<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".TaskDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="128dp"
            android:layout_marginTop="44dp"
            android:fontFamily="@font/nunito_bold"
            android:gravity="center"
            android:text="Task details"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">

            <TextView
                android:id="@+id/textViewName"
                android:layout_width="54dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="46dp"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/nunito_semibold"
                android:text="@string/name"
                android:textColor="@color/darkgrey"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/detailName"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="46dp"
                android:layout_marginTop="52dp"
                android:layout_marginEnd="46dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:background="@drawable/input_box"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">

            <TextView
                android:id="@+id/textViewDueDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="46dp"
                android:fontFamily="@font/nunito_semibold"
                android:text="@string/due_date"
                android:textColor="@color/darkgrey"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/detailDate"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="46dp"
                android:layout_marginTop="22dp"
                android:layout_marginEnd="46dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:background="@drawable/input_box"
                android:clickable="false"
                android:cursorVisible="false"
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="date"
                android:minHeight="48dp"
                tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">

            <TextView
                android:id="@+id/textViewAddTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="46dp"
                android:fontFamily="@font/nunito_semibold"
                android:text="Time"
                android:textColor="@color/darkgrey"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/detailTime"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="46dp"
                android:layout_marginTop="22dp"
                android:layout_marginEnd="46dp"
                android:background="@drawable/input_box"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">

            <TextView
                android:id="@+id/textViewCourse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="46dp"
                android:fontFamily="@font/nunito_semibold"
                android:text="@string/courses"
                android:textColor="@color/darkgrey"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/detailCourse"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="46dp"
                android:layout_marginTop="22dp"
                android:layout_marginEnd="46dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:background="@drawable/input_box"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">

            <TextView
                android:id="@+id/textViewDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="46dp"
                android:fontFamily="@font/nunito_semibold"
                android:text="@string/desc"
                android:textColor="@color/darkgrey"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/detailDescription"
                android:layout_width="320dp"
                android:layout_height="100dp"
                android:layout_marginStart="46dp"
                android:layout_marginTop="22dp"
                android:layout_marginEnd="46dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:background="@drawable/input_box"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/deleteTaskButton"
                android:layout_width="108dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="84dp"
                android:layout_marginTop="71dp"
                android:layout_marginEnd="65dp"
                android:background="@drawable/grey_button"
                android:fontFamily="@font/nunito_semibold"
                android:text="Delete"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/editTaskButton"
                android:layout_width="108dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="217dp"
                android:layout_marginTop="71dp"
                android:background="@drawable/dark_button"
                android:fontFamily="@font/nunito_semibold"
                android:text="Edit"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />

        </RelativeLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>